# locallmos-agent

./: .env.example  .gitignore  LICENSE  README.md  SERVICE.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.github/workflows/: llamacpp-prebuilt.yml  release.yml
docs/: llamacpp-backend-selection-plan.md  llamacpp-prebuilt-hosting-plan.md
scripts/: set-version.mjs
service/: LLAMACPP_VERSION  agent.env.example  install-service.sh  install.ps1  install.sh  lib-llamacpp.sh  locallmos-agent.service  os.locallmos.agent.plist  uninstall-service.sh
src/: App.tsx  api.ts  styles.ts  types.ts  useTabWindowSize.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: README.md  icon.icns
src-tauri/src/: chat.rs  chat_store.rs  config.rs  hardware.rs  hub.rs  lib.rs  local_chat.rs  main.rs  monitor.rs  realtime.rs  settings.rs  status.rs  supabase.rs  updater.rs  worker.rs
src-tauri/src/runtime/: llama_server.rs  mod.rs  ollama.rs  tool_protocol.rs  tools.rs
src/chat/: AttachmentChip.tsx  ChatView.tsx  Composer.tsx  Conversation.tsx  Markdown.tsx  MessageView.tsx  ModelPicker.tsx  SessionSettingsPanel.tsx  Sidebar.tsx  ThinkingBlock.tsx  attachments.ts  useChatStream.ts
src/dashboard/: Dashboard.tsx
src/downloads/: DownloadBanner.test.tsx  DownloadBanner.tsx  download-banner.css
src/models/: ModelsView.test.tsx  ModelsView.tsx  fit.test.ts  fit.ts  models.css
