[package]
name = "locallmos-agent"
version = "0.0.1"
description = "LocalLMOS agent — monitors and manages local LLM runtimes on a rig"
edition = "2021"
rust-version = "1.77"

[lib]
name = "locallmos_agent_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "sync", "net", "io-util"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
tokio-tungstenite = { version = "0.24", default-features = false, features = ["connect", "rustls-tls-webpki-roots"] }
futures-util = "0.3"
sysinfo = "0.32"
nvml-wrapper = "0.10"
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
anyhow = "1"
thiserror = "2"
dirs = "5"
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[features]
# By default the agent refuses free-form shell commands; opt in per build.
allow-shell = []
